--- a/index.html
+++ b/index.html
@@ -54,30 +54,27 @@
 </div>
 
 <div class="container2">
-    <div class="card">
+    <div class="card1">
         <img src="image.png" class="image" alt="Imagem complementar">
             <p>Spaceflight Inc. lança novo veículo de transferência orbital para foguete via satélite</p>
     </div>
-    <div class="card">
+    <div class="card1">
         <img src="image-2.png" class="image-2" alt="Imagem complementar">
             <p>17 filmes icônicos com classificações surpreendentemente baixas</p>
     </div>
-    <div class="card">
+    <div class="card1">
         <img src="image-3.png" class="image-3" alt="Imagem complementar">
             <p>Por que as ações da Netflix caíram 10%</p>
     </div>
-    <div class="card">
+    <div class="card1">
         <img src="image-4.png" class="image-4" alt="Imagem complementar">
             <p>Apple abre outra megaloja na China em meio às críticas de William Barr</p>
     </div>
-    
+    <div class="botao-container">
+        <button class="botao">Veja mais galerias</button>
+    </div>
 </div>
 
-<div class="btn">
-<span class="Veja-mais-galerias">
-  Veja mais galerias
-</span>
-</div>
 <div class="container3">
     <div class="card">
         <img src="banner-01.png" class="banner-01" alt="Imagem complementar">
@@ -87,22 +84,49 @@
     </div>
 </div>
 
-<h1>Galeria de fotos</h1>
-<div class="container4">
-    <div class="card">
-        <img src="dir.png" class="image" alt="Imagem complementar">
-            <p>Spaceflight Inc. lança novo veículo de transferência orbital para foguete via satélite</p>
+<div class="galeria">
+    <h2>Galeria de Fotos</h2>
+    <div class="foto">
+        <img src="dir.png" alt="dir">
+        <p class="descricao">Iniciando seu blog de viagem com o Vasco.</p>
     </div>
-    <div class="card">
-        <img src="foto-center-3.png" class="image-2" alt="Imagem complementar">
-            <p>17 filmes icônicos com classificações surpreendentemente baixas</p>
+    <div class="foto">
+        <img src="foto-center-3.png" alt="foto-center-3">
+        <p class="descricao">Como escolher o cliente certo para o seu negócio fotográfico?</p>
     </div>
-    <div class="card">
-        <img src="dir-2.png" class="image-3" alt="Imagem complementar">
-            <p>Por que as ações da Netflix caíram 10%</p>
+    <div class="foto">
+        <img src="dir-2.png" alt="dir-2">
+        <p class="descricao">Como construir uma comunidade leal online e offline.</p>
     </div>
-    
+    <button class="botao">Veja mais galerias</button>
 </div>
+
+<div class="eventos">
+    <h2>Calendário de Eventos</h2>
+    <div class="foto-container">
+        <div class="foto2">
+            <img src="agenda-1.png" alt="agenda">
+            <p>Como escrever conteúdo sobre suas fotos.</p>
+        </div>
+        <div class="foto2">
+            <img src="agenda-1-2.png" alt="agenda2">
+            <p>Onde expandir seu negócio como fotógrafo: site ou mídia social?</p>
+        </div>
+        <div class="foto2">
+            <img src="agenda-1-3.png" alt="agenda3">
+            <p>Como um artista visual redefine o sucesso em design gráfico</p>
+        </div>
+        <div class="foto2">
+            <img src="agenda-1-4.png" alt="agenda4">
+            <p>Comece um blog para atingir seu pico criativo</p>
+        </div>
+    </div>
+    <div class="botao-container">
+        <button class="botao">Veja mais eventos</button>
+    </div>
+</div>
+
+
 
    <!-- </div> -->
 </body>
