--- a/index.html
+++ b/index.html
@@ -125,6 +125,31 @@
         <button class="botao">Veja mais eventos</button>
     </div>
 </div>
+<div class="galeria-container">
+    <div class="galeria-item">
+        <h2>Galeria de Vídeos</h2>
+        <img src="foto-center-5.png" alt="Galeria de Vídeos">
+        <p>Como a escrita influencia sua marca pessoal?</p>
+        <button class="botao">Veja mais vídeos</button>
+    </div>
+    <div class="galeria-item">
+        <h2>Galeria de Obras</h2>
+        <img src="foto-center-4.png" alt="Galeria de Obras">
+        <p>Por que não usa os sites prontos</p>
+        <button class="botao">Veja mais obras</button>
+    </div>
+</div>
+<div class="secao-container">
+    <img src="image-5.png" alt="Imagem de fundo" class="imagem-fundo">
+    <div class="overlay2">
+        <h2>Conheça a melhor cidade do Brasil</h2>
+        <p>É a sua cidade! Onde tem tudo o que você precisa.</p>
+        <div class="botoes-container">
+            <button class="botao amarelo">Conheça a cidade</button>
+            <button class="botao azul">Conheça a economia</button>
+        </div>
+    </div>
+</div>
 
 
 
