--- a/index.html
+++ b/index.html
@@ -151,8 +151,94 @@
     </div>
 </div>
 
+<div class="info-top-container">
+    <div class="info-item">
+        <h3>Horário de Atendimento</h3>
+        <p>Segunda à Sexta, 07h às 11h e das 13h às 17h</p>
+    </div>
+    <div class="info-item">
+        <h3>Endereço</h3>
+        <p>Rua das Azaleias, 257 - Jardim Botânico - Sinop/MT</p>
+    </div>
+    <div class="info-item">
+        <h3>Fale com a Prefeitura</h3>
+        <p>(66) 3535-3535</p>
+        <p>(66) 9 9999-9999</p>
+    </div>
+</div>
 
-
+<div class="info-sections">
+    <div class="info-block">
+        <h3>Imprensa</h3>
+        <ul>
+            <li>Notícias</li>
+            <li>Agenda da Cidade</li>
+            <li>Galeria de Fotos</li>
+            <li>Galeria de Vídeos</li>
+        </ul>
+    </div>
+    <div class="info-block">
+        <h3>Contato</h3>
+        <ul>
+            <li>Ouvidoria E-SIC</li>
+            <li>Telefones Úteis</li>
+        </ul>
+    </div>
+    <div class="info-block">
+        <h3>Prefeitura</h3>
+        <ul>
+            <li>Equipe do Governo</li>
+            <li>Fotos da Prefeitura</li>
+            <li>Galeria de Prefeitos</li>
+            <li>Conheça Nosso Prefeito</li>
+            <li>Conheça Nossa Vice-Prefeita</li>
+            <li>Competência, Estrutura e Organização</li>
+        </ul>
+    </div>
+    <div class="info-block">
+        <h3>Município</h3>
+        <ul>
+            <li>Economia</li>
+            <li>Símbolos</li>
+            <li>Como Chegar</li>
+            <li>Galeria de Obras</li>
+            <li>História do Município</li>
+            <li>Hino, Bandeira e Brasão</li>
+            <li>Conheça Nosso Município</li>
+        </ul>
+    </div>
+    <div class="info-block">
+        <h3>Secretarias</h3>
+        <ul>
+            <li>Administração</li>
+            <li>Agricultura e Desenvolvimento Econômico Sustentável</li>
+            <li>Assistência Social</li>
+            <li>Educação</li>
+            <li>Esportes</li>
+            <li>Finanças</li>
+            <li>Infraestrutura</li>
+            <li>Meio Ambiente, Turismo e Cultura</li>
+            <li>Planejamento, Tecnologia e Informática</li>
+            <li>Saúde</li>
+        </ul>
+    </div>
+</div>
+<div class="map-container">
+    <iframe 
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31514.123456789!2d-55.509544!3d-11.860846!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x939e8f8f8f8f8f8f%3A0x123456789abcdef!2sSinop%2C%20MT!5e0!3m2!1spt-BR!2sbr!4v1234567890123" 
+        width="100%" 
+        height="400" 
+        style="border-radius: 10px; border: none;" 
+        allowfullscreen="" 
+        loading="lazy">
+    </iframe>
+</div>
+<footer class="footer-container">
+    <div class="footer-content">
+        <span>©Ano - Nome do cliente - Todos os direitos reservados.</span>
+        <img src="logo-mpx.png" alt="MPX BRASIL logo">
+    </div>
+</footer>
    <!-- </div> -->
 </body>
 </html>
