--- a/index.html
+++ b/index.html
@@ -5,15 +5,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Layout - Processo Seletivo</title>
+    <!-- Seu estilo personalizado sempre primeiro -->
     <link rel="stylesheet" href="style.css">
+
+    <!-- Slick Carousel (deve vir antes de Bootstrap) -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" />
+
+    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+    <!-- Bootstrap Icons (pode vir por último) -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
-
+    <!-- jQuery moderno (evite 1.11.0, pois é muito antigo) -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+
+
+
+
 </head>
 
 <body>
@@ -109,7 +124,7 @@
             </div>
         </div>
     </div>
-    <!-- fim logo -->
+    <!-- fim logo do cliente -->
 
     <!-- menu -->
     <div class="container-fluid menuinc">
@@ -188,55 +203,182 @@
     </div>
     <!-- fim menu -->
 
+    <!-- Navegação carrossel -->
+    <!-- Inicio indicadores de navegação slide -->
+    <div class="container-fluid">
+        <div id="carrosselind" class="carousel slide carrossel">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carrosselind" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carrosselind" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carrosselind" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+
+            <!-- Fim indicadores de navegação slide -->
+            <!-- Inicio carrosel de slide -->
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="images\vitrine.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="images\vitrine.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="images\vitrine.png" class="d-block w-100" alt="...">
+                </div>
+            </div>
+            <!-- Fim carrossel de slide -->
+            <!-- Inicio anterior e proximo slide -->
+            <button class="carousel-control-prev" type="button" data-bs-target="#carrosselind" data-bs-slide="prev">
+                <span><img src="images/btn-esq.png" alt="Previous"></span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carrosselind" data-bs-slide="next">
+                <span><img src="images/btn-dir.png" alt=""></span>
+            </button>
+            <!-- Fim anterior e proximo slide -->
+        </div>
+    </div>
+    <!-- Fim navegação carrossel -->
+
+    <!-- menu serviços -->
+    <div class="container-fluid ctnser">
+        <div class="container ctnservicos">
+            <div class="servicos">
+                <a href="#">
+                    <button class="rectangle-ser">
+                        <div class="row">
+                            <img class="imgouv" src="images/imgser.jpeg" alt="">
+                            <p class="pser">Serviços 1</p>
+                        </div>
+                    </button>
+                </a>
+                <a href="#">
+                    <button class="rectangle-ser">
+                        <div class="row">
+                            <img class="imgouv" src="images/imgser.jpeg" alt="">
+                            <p class="pser">Serviços 2</p>
+                        </div>
+                    </button>
+                </a>
+                <a href="#">
+                    <button class="rectangle-ser">
+                        <div class="row">
+                            <img class="imgouv" src="images/imgser.jpeg" alt="">
+                            <p class="pser">Serviços 3</p>
+                        </div>
+                    </button>
+                </a>
+                <a href="#">
+                    <button class="rectangle-ser">
+                        <div class="row">
+                            <img class="imgouv" src="images/imgser.jpeg" alt="">
+                            <p class="pser">Serviços 4</p>
+                        </div>
+                    </button>
+                </a>
+                <a href="#">
+                    <button class="rectangle-ser">
+                        <div class="row">
+                            <img class="imgouv" src="images/imgser.jpeg" alt="">
+                            <p class="pser">Serviços 5</p>
+                        </div>
+                    </button>
+                </a>
+                <a href="#">
+                    <button class="rectangle-ser">
+                        <div class="row">
+                            <img class="imgouv" src="images/imgser.jpeg" alt="">
+                            <p class="pser">Serviços 6</p>
+                        </div>
+                    </button>
+                </a>
+                <a href="#">
+                    <button class="rectangle-ser">
+                        <div class="row">
+                            <img class="imgouv" src="images/imgser.jpeg" alt="">
+                            <p class="pser">Serviços 7</p>
+                        </div>
+                    </button>
+                </a>
+            </div>
+        </div>
+    </div>
+    <!-- fim menu serviços -->
+
     <!-- Conteúdo principal -->
+    <div class="container">
+        <div class="row">
+            <h5 class="noticia-titulo">Notícias</h5>
+        </div>
+        <div class="container containerconteudo">
+            <div class="col-12 colconteudo">
+                <div class="col-md-6 boxconteudo">
+                    <div class="card custom-card">
+                        <div class="card-img-container">
+                            <img src="images\foto-center-2.png" class="card-img-top" alt="Montanha nevada">
+                            <div class="date-badge">13/04/2020</div>
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text">Ted Sarandos nomeado co-CEO da Netflix</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 boxconteudo">
+                    <div class="card custom-card">
+                        <div class="card-img-container">
+                            <img src="images\foto-center.png" class="card-img-top" alt="">
+                            <div class="date-badge">14/04/2020</div>
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text">O aplicativo de meditação Calm está tendo seu próprio programa HBO Max
+                                cheio de celebridades</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 colconteudo2">
 
-
-    <div class="container2">
-        <div class="card1">
-            <img src="image.png" class="image" alt="Imagem complementar">
-            <p>Spaceflight Inc. lança novo veículo de transferência orbital para foguete via satélite</p>
-        </div>
-        <div class="card1">
-            <img src="image-2.png" class="image-2" alt="Imagem complementar">
-            <p>17 filmes icônicos com classificações surpreendentemente baixas</p>
-        </div>
-        <div class="card1">
-            <img src="image-3.png" class="image-3" alt="Imagem complementar">
-            <p>Por que as ações da Netflix caíram 10%</p>
-        </div>
-        <div class="card1">
-            <img src="image-4.png" class="image-4" alt="Imagem complementar">
-            <p>Apple abre outra megaloja na China em meio às críticas de William Barr</p>
+            </div>
         </div>
         <div class="botao-container">
-            <button class="botao">Veja mais galerias</button>
+            <button class="botaonoticia">Veja mais notícias</button>
         </div>
     </div>
 
-    <div class="container3">
-        <div class="card">
-            <img src="banner-01.png" class="banner-01" alt="Imagem complementar">
-        </div>
-        <div class="card">
-            <img src="banner-02.png" class="banner-02" alt="Imagem complementar">
+    <!-- banner -->
+    <div class="container banner">
+        <div class="col-12 bannerimg">
+            <img src="images\banner-01.png">
+            <img src="images\banner-02.png">
         </div>
     </div>
+
+    <!-- fim banner -->
+
+    <!-- <div class="container3">
+        <div class="card">
+            <img src="" class="banner-01" alt="Imagem complementar">
+        </div>
+        <div class="card">
+            <img src="" class="banner-02" alt="Imagem complementar">
+        </div>
+    </div> -->
 
     <div class="galeria">
         <h2>Galeria de Fotos</h2>
         <div class="foto">
-            <img src="dir.png" alt="dir">
+            <img src="" alt="dir">
             <p class="descricao">Iniciando seu blog de viagem com o Vasco.</p>
         </div>
         <div class="foto">
-            <img src="foto-center-3.png" alt="foto-center-3">
+            <img src="" alt="foto-center-3">
             <p class="descricao">Como escolher o cliente certo para o seu negócio fotográfico?</p>
         </div>
         <div class="foto">
-            <img src="dir-2.png" alt="dir-2">
+            <img src="" alt="dir-2">
             <p class="descricao">Como construir uma comunidade leal online e offline.</p>
         </div>
-        <button class="botao">Veja mais galerias</button>
+        <button class="botaogaleria">Veja mais galerias</button>
     </div>
 
     <div class="eventos">
@@ -263,45 +405,92 @@
             <button class="botao">Veja mais eventos</button>
         </div>
     </div>
-    <div class="galeria-container">
-        <div class="galeria-item">
-            <h2>Galeria de Vídeos</h2>
-            <img src="foto-center-5.png" alt="Galeria de Vídeos">
-            <p>Como a escrita influencia sua marca pessoal?</p>
-            <button class="botao">Veja mais vídeos</button>
+
+    <!-- Gaaleria de obras -->
+
+    <div class="container metadesite">
+        <div class="row">
+            <div class="col-md-6">
+                <h5 class="noticia-titulo1">Galeria de Vídeos</h5>
+            </div>
+            <div class="col-md-6">
+                <h5 class="noticia-titulo1">Galeria de Obras</h5>
+            </div>
         </div>
-        <div class="galeria-item">
-            <h2>Galeria de Obras</h2>
-            <img src="foto-center-4.png" alt="Galeria de Obras">
-            <p>Por que não usa os sites prontos</p>
-            <button class="botao">Veja mais obras</button>
+        <div class="col-12 meiosite">
+            <div class="col-md-6 boxmeiosite">
+
+                <div class="card custom-card">
+                    <div class="card-img-container">
+                        <img src="images\foto-center-5.png" class="card-img-top" alt="Biblioteca">
+                        <div class="play-overlay"></div>
+                    </div>
+                    <div class="card-body d-flex align-items-start">
+                        <p class="mb-0 fw-semibold txtmeiosite">Como a escrita influencia sua marca pessoal?</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 boxmeiosite">
+
+                <div class="card custom-card">
+                    <div class="card-img-container">
+                        <img src="images\foto-center-4.png" class="card-img-top" alt="Biblioteca">
+                        <div class="date-badge">13/04/2020</div>
+                    </div>
+                    <div class="card-body d-flex align-items-start">
+                        <p class="mb-0 fw-semibold txtmeiosite">Por que não usamos sites prontos</p>
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>
-    <div class="secao-container">
-        <img src="image-5.png" alt="Imagem de fundo" class="imagem-fundo">
-        <div class="overlay2">
-            <h2>Conheça a melhor cidade do Brasil</h2>
-            <p>É a sua cidade! Onde tem tudo o que você precisa.</p>
-            <div class="botoes-container">
-                <button class="botao amarelo">Conheça a cidade</button>
-                <button class="botao azul">Conheça a economia</button>
+        <div class="row">
+            <div class="col-md-6">
+                <button class="botao1"><p>Veja mais vídeos</p></button>
+            </div>
+            <div class="col-md-6">
+                <button class="botao1"><p>Veja mais obras</p></button>
             </div>
         </div>
     </div>
 
-    <div class="info-top-container">
-        <div class="info-item">
-            <h3>Horário de Atendimento</h3>
-            <p>Segunda à Sexta, 07h às 11h e das 13h às 17h</p>
+    <!-- Fim galeria de obras -->
+
+    <!-- Banner final -->
+    <div class="container-fluid secao-container">
+        <div class="secao-container1">
+            <img src="images/image-5.png" alt="Imagem de fundo" class="imagem-fundo">
+            <div class="overlay2">
+                <div class="container" style="display: grid; justify-content: center !important;">
+                    <p class="p1">Conheça a</p>
+                    <p class="p2">Melhor Cidade do Brasil</p>
+                    <p class="txtcidade">É a sua cidade! Onde tem tudo o que você precisa.</p>
+                    <div class="botoes-container">
+                        <button class="botao amarelo">Conheça a cidade</button>
+                        <button class="botao azul">Conheça a economia</button>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="info-item">
-            <h3>Endereço</h3>
-            <p>Rua das Azaleias, 257 - Jardim Botânico - Sinop/MT</p>
-        </div>
-        <div class="info-item">
-            <h3>Fale com a Prefeitura</h3>
-            <p>(66) 3535-3535</p>
-            <p>(66) 9 9999-9999</p>
+    </div>
+    <!-- banner final -->
+
+    <div class="container-fluid info-top-container">
+        <div class="container">
+            <div class="col-12 d-flex">
+                <div class="col-md-4 boxinfo">
+                    <h4>Horário de Atendimento</h4>
+                    <p>Segunda à Sexta, 07h às 11h e das 13h às 17h</p>
+                </div>
+                <div class="col-md-4 boxinfo">
+                    <h4>Endereço</h4>
+                    <p>Rua das Azaleias, 257 - Jardim Botânico - Sinop/MT</p>
+                </div>
+                <div class="col-md-4 boxinfo">
+                    <h4>Fale com a Prefeitura</h4>
+                    <p>(66) 3535-3535</p>
+                    <p>(66) 9 9999-9999</p>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -361,10 +550,11 @@
             </ul>
         </div>
     </div>
-    <div class="map-container">
+    <div class="container-fluid map-container">
         <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31514.123456789!2d-55.509544!3d-11.860846!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x939e8f8f8f8f8f8f%3A0x123456789abcdef!2sSinop%2C%20MT!5e0!3m2!1spt-BR!2sbr!4v1234567890123"
-            width="100%" height="400" style="border-radius: 10px; border: none;" allowfullscreen="" loading="lazy">
+            width="100%" height="400" style="border-radius: 0 0 12px 12px; border: none;" allowfullscreen=""
+            loading="lazy">
         </iframe>
     </div>
     <footer class="footer-container">
@@ -377,3 +567,14 @@
 </body>
 
 </html>
+<script>
+    $('.servicos').slick({
+        infinite: true,
+        slidesToShow: 6,
+        slidesToScroll: 1,
+        arrows: true,
+        dots: false,
+        prevArrow: '<a type="button" class="arrow-prev"><img src="images/btn-esq.png" alt="Anterior"></a>',
+        nextArrow: '<a type="button" class="arrow-next"><img src="images/btn-dir.png" alt="Próximo"></a>',
+    });
+</script>
