Ajustes Finais Bootstrap

--- a/index.html
+++ b/index.html
@@ -364,24 +364,118 @@
         </div>
     </div> -->
 
+    <!-- galeria de fotos antiga(deletar) -->
     <div class="galeria">
-        <h2>Galeria de Fotos</h2>
+        <h5 class="noticia-titulo" style="color: #ffffff; text-align: center;">Galeria de Fotos</h5>
         <div class="foto">
-            <img src="" alt="dir">
-            <p class="descricao">Iniciando seu blog de viagem com o Vasco.</p>
+            <div class="card-img-container">
+                <img src="images\dir.png" class="card-img-top" alt="">
+                <div class="date-badge">13/04/2020</div>
+            </div>
+            <p></p>
         </div>
         <div class="foto">
-            <img src="" alt="foto-center-3">
-            <p class="descricao">Como escolher o cliente certo para o seu negócio fotográfico?</p>
+            <div class="card-img-container">
+                <img src="images\foto-center-3.png" class="card-img-top" alt="">
+                <div class="date-badge">13/04/2020</div>
+            </div>
         </div>
         <div class="foto">
-            <img src="" alt="dir-2">
-            <p class="descricao">Como construir uma comunidade leal online e offline.</p>
+            <div class="card-img-container">
+                <img src="images\dir-2.png" class="card-img-top" alt="">
+                <div class="date-badge">13/04/2020</div>
+            </div>
         </div>
         <button class="botaogaleria">Veja mais galerias</button>
     </div>
 
-    <div class="eventos">
+    <!-- Fim galeria de fotos antiga -->
+    <!-- Calendario de eventos -->
+    <!-- <div class="container-fluid calendarioeven">
+        <div class="row rowcale">
+            <p class="noticia-titulo">Calendario de Eventos</p>
+        </div>
+        <div class="col-12 coleven">
+            <div class="col-md-3">
+                <div class="data-evento">
+                    <p class="even-text">
+                        13 <span class="even-rest">de dezembro 2020</span>
+                    </p>
+                </div>
+                <div class="hora-evento">
+                    A partir das 16:30
+                </div>
+                <div class="imagem-evento">
+                    <img class="img-fluid evenimg" src="images\agenda-1.png" alt="Imagem do evento">
+                </div>
+                <div class="titulo-evento">
+                    Como escrever conteúdo sobre suas fotos
+                </div>
+                <div class="endereco-evento">
+                    Rua das azaleias, 257 – Jardim Botânico – Sinop/MT
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="data-evento">
+                    <p class="even-text">
+                        13 <span class="even-rest">de dezembro 2020</span>
+                    </p>
+                </div>
+                <div class="hora-evento">
+                    A partir das 16:30
+                </div>
+                <div class="imagem-evento">
+                    <img class="img-fluid evenimg" src="images\agenda-1.png" alt="Imagem do evento">
+                </div>
+                <div class="titulo-evento">
+                    Onde expandir seu negócio como fotógrafo: site ou mídia social?
+                </div>
+                <div class="endereco-evento">
+                    Rua das azaleias, 257 – Jardim Botânico – Sinop/MT
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="data-evento">
+                    <p class="even-text">
+                        13 <span class="even-rest">de dezembro 2020</span>
+                    </p>
+                </div>
+                <div class="hora-evento">
+                    A partir das 16:30
+                </div>
+                <div class="imagem-evento">
+                    <img class="img-fluid evenimg" src="images\agenda-1.png" alt="Imagem do evento">
+                </div>
+                <div class="titulo-evento">
+                    Como um artista visual redefine o sucesso em design gráfico
+                </div>
+                <div class="endereco-evento">
+                    Rua das azaleias, 257 – Jardim Botânico – Sinop/MT
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="data-evento">
+                    <p class="even-text">
+                        13 <span class="even-rest">de dezembro 2020</span>
+                    </p>
+                </div>
+                <div class="hora-evento">
+                    A partir das 16:30
+                </div>
+                <div class="imagem-evento">
+                    <img class="img-fluid evenimg" src="images\agenda-1.png" alt="Imagem do evento">
+                </div>
+                <div class="titulo-evento">
+                    Comece um blog para atingir seu pico criativo
+                </div>
+                <div class="endereco-evento">
+                    Rua das azaleias, 257 – Jardim Botânico – Sinop/MT
+                </div>
+            </div>
+        </div>
+    </div> -->
+
+    <!-- <div class="eventos">
         <h2>Calendário de Eventos</h2>
         <div class="foto-container">
             <div class="foto2">
@@ -404,9 +498,10 @@
         <div class="botao-container">
             <button class="botao">Veja mais eventos</button>
         </div>
-    </div>
+    </div> -->
+    <!-- Fim calendario de eventos -->
 
-    <!-- Gaaleria de obras -->
+    <!-- Galeria de obras -->
 
     <div class="container metadesite">
         <div class="row">
@@ -426,7 +521,8 @@
                         <div class="play-overlay"></div>
                     </div>
                     <div class="card-body d-flex align-items-start">
-                        <p class="mb-0 fw-semibold txtmeiosite">Como a escrita influencia sua marca pessoal?</p>
+                        <p class="mb-0 fw-semibold txtmeiosite">Como a escrita influencia sua marca pessoal?
+                        </p>
                     </div>
                 </div>
             </div>
@@ -445,10 +541,14 @@
         </div>
         <div class="row">
             <div class="col-md-6">
-                <button class="botao1"><p>Veja mais vídeos</p></button>
+                <button class="botao1">
+                    <p>Veja mais vídeos</p>
+                </button>
             </div>
             <div class="col-md-6">
-                <button class="botao1"><p>Veja mais obras</p></button>
+                <button class="botao1">
+                    <p>Veja mais obras</p>
+                </button>
             </div>
         </div>
     </div>
@@ -493,63 +593,72 @@
             </div>
         </div>
     </div>
-
-    <div class="info-sections">
-        <div class="info-block">
-            <h3>Imprensa</h3>
-            <ul>
-                <li>Notícias</li>
-                <li>Agenda da Cidade</li>
-                <li>Galeria de Fotos</li>
-                <li>Galeria de Vídeos</li>
-            </ul>
-        </div>
-        <div class="info-block">
-            <h3>Contato</h3>
-            <ul>
-                <li>Ouvidoria E-SIC</li>
-                <li>Telefones Úteis</li>
-            </ul>
-        </div>
-        <div class="info-block">
-            <h3>Prefeitura</h3>
-            <ul>
-                <li>Equipe do Governo</li>
-                <li>Fotos da Prefeitura</li>
-                <li>Galeria de Prefeitos</li>
-                <li>Conheça Nosso Prefeito</li>
-                <li>Conheça Nossa Vice-Prefeita</li>
-                <li>Competência, Estrutura e Organização</li>
-            </ul>
-        </div>
-        <div class="info-block">
-            <h3>Município</h3>
-            <ul>
-                <li>Economia</li>
-                <li>Símbolos</li>
-                <li>Como Chegar</li>
-                <li>Galeria de Obras</li>
-                <li>História do Município</li>
-                <li>Hino, Bandeira e Brasão</li>
-                <li>Conheça Nosso Município</li>
-            </ul>
-        </div>
-        <div class="info-block">
-            <h3>Secretarias</h3>
-            <ul>
-                <li>Administração</li>
-                <li>Agricultura e Desenvolvimento Econômico Sustentável</li>
-                <li>Assistência Social</li>
-                <li>Educação</li>
-                <li>Esportes</li>
-                <li>Finanças</li>
-                <li>Infraestrutura</li>
-                <li>Meio Ambiente, Turismo e Cultura</li>
-                <li>Planejamento, Tecnologia e Informática</li>
-                <li>Saúde</li>
-            </ul>
+    <!-- Final da pagina -->
+    <div class="container-fluid info-container-final">
+        <div class="container d-flex">
+            <div class="col-md-3 boxinfo">
+                <h4>Imprensa</h4>
+                <div class="list-group">
+                    <a href="#" class="lista-final">Notícias</a>
+                    <a href="#" class="lista-final">Agenda da Cidade</a>
+                    <a href="#" class="lista-final">Galeria de Fotos</a>
+                    <a href="#" class="lista-final">Galeria de Vídeos</a>
+                </div>
+                <h4 style="margin-top: 7px;">Contato</h4>
+                <div class="list-group">
+                    <a href="#" class="lista-final">Ouvidoria E-SIC</a>
+                    <a href="#" class="lista-final">Telefones Úteis</a>
+                </div>
+            </div>
+            <div class="col-md-3 boxinfo">
+                <div class="col-md-3 boxinfo">
+                    <h4>Prefeitura</h4>
+                    <div class="list-group">
+                        <a href="#" class="lista-final">Equipe do Governo</a>
+                        <a href="#" class="lista-final">Fotos da Prefeitura</a>
+                        <a href="#" class="lista-final">Galeria de Prefeitos</a>
+                        <a href="#" class="lista-final">Conheça Nosso Prefeito</a>
+                        <a href="#" class="lista-final">Conheça Nossa Vice-Prefeita</a>
+                        <a href="#" class="lista-final">Competência, Estrutura e Organização</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="col-md-3 boxinfo">
+                    <h4>Municipio</h4>
+                    <div class="list-group">
+                        <a href="#" class="lista-final">Economia</a>
+                        <a href="#" class="lista-final">Símbolos</a>
+                        <a href="#" class="lista-final">Como Chegar</a>
+                        <a href="#" class="lista-final">Galeria de Obras</a>
+                        <a href="#" class="lista-final">História do Município</a>
+                        <a href="#" class="lista-final">Hino, Bandeira e Brasão</a>
+                        <a href="#" class="lista-final">Conheça Nosso Município</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="col-md-3 boxinfo">
+                    <h4>Secretarias</h4>
+                    <div class="list-group">
+                        <a href="#" class="lista-final">Administração</a>
+                        <a href="#" class="lista-final">Agricultura e Desenvolvimento Econômico Sustentável</a>
+                        <a href="#" class="lista-final">Assistência Social</a>
+                        <a href="#" class="lista-final">Educação</a>
+                        <a href="#" class="lista-final">Esportes</a>
+                        <a href="#" class="lista-final">Finanças</a>
+                        <a href="#" class="lista-final">Infraestrutura</a>
+                        <a href="#" class="lista-final">Meio Ambiente, Turismo e Cultura</a>
+                        <a href="#" class="lista-final">Planejamento, Tecnologia e Informática</a>
+                        <a href="#" class="lista-final">Saúde</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
+    <!-- final da pagina -->
+
+
     <div class="container-fluid map-container">
         <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31514.123456789!2d-55.509544!3d-11.860846!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x939e8f8f8f8f8f8f%3A0x123456789abcdef!2sSinop%2C%20MT!5e0!3m2!1spt-BR!2sbr!4v1234567890123"
@@ -560,7 +669,7 @@
     <footer class="footer-container">
         <div class="footer-content">
             <span>©Ano - Nome do cliente - Todos os direitos reservados.</span>
-            <img src="logo-mpx.png" alt="MPX BRASIL logo">
+            <img src="images\logo-mpx.png" alt="MPX BRASIL logo">
         </div>
     </footer>
     <!-- </div> -->
